--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,11 +1,16 @@
-.image-list{
-    display:grid;
-    grid-template-columns:repeat(auto-fill,minmax(250px,1fr));
-    grid-gap:10px;
-    grid-auto-rows: 200px;
+.image-list {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+  }
+.image-list-wrapper{
+    width:100% !important;
+    padding-left: 10px;
+    padding-right: 10px
 }
 
 .image-list img{
-    width:250px;
-    height: 100%;
+    width:100%;
+    height: auto !important;
+
 }
